--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donet the poor people</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<section class="header">
-    <h1>Help the poor people</h1>
-    <h3>Recently there were a big flood in whole Sylet. they are in a big danger now. the need help . lets help them</h3>
-    
-</section>
+<header>
+    <div class="header">
+        <h1>Help the poor people</h1>
+        <h3>Recently there were a big flood in whole Sylet. they are in a big danger now. the need help . lets help them</h3>
+        <button class="donet-now-btn"> Donet now</button>
+    </div>
+</header>
     
 </body>
 </html>
