--- a/index.html
+++ b/index.html
@@ -11,10 +11,34 @@
 <header>
     <div class="header">
         <h1>Help the poor people</h1>
-        <h3>Recently there were a big flood in whole Sylet. they are in a big danger now. the need help . lets help them</h3>
+        <h3>Recently there are a big flood in whole Sylet. They are in a big danger now. They need help. <br> There are many children, olds, animal and so who roughly need help. Lets help them from your soul.</h3>
         <button class="donet-now-btn"> Donet now</button>
     </div>
 </header>
+<section>
+    <div class="donet-here">
+        <h1>Donet From Here</h1>
+        <p>Donet now as you can as your ability. Your donet will reach to the helpless people soon. <br> And your soul would be happy and peace in mind. <br/> </p>
+        <p><b><u>Select amountre here</u></b></p>
+        <ul class="amount">
+            <li>$ 10</li>
+            <li id="dolar">$ 50</li>
+            <li>$ 100</li>
+            <li>$ 500</li>
+            <li>$ 1000</li>
+        </ul>
+        <input class="put" type="text" placeholder="Other AMOUNT (Dolar)" >
+
+    </div>
+</section>
     
 </body>
 </html>
+
+<!-- <div class="amount">
+    <h3>$ 10</h3>
+    <h3>$ 50</h3>
+    <h3>$ 200</h3>
+    <h3>$ 1000</h3>
+    <h3>$ 5000</h3>
+</div> -->
