--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <header>
     <div class="header">
         <h1>Help the poor people</h1>
-        <h3>Recently there are a big flood in whole Sylet. They are in a big danger now. They need help. <br> There are many children, olds, animal and so who roughly need help. Lets help them from your soul.</h3>
+        <h4>Recently there are a big flood in whole Sylet. They are in a big danger now. They need help. <br> There are many children, olds, animal and so who roughly need help. Lets help them from your soul.</h4>
         <button class="donet-now-btn"> Donet now</button>
     </div>
 </header>
@@ -29,16 +29,35 @@
         </ul>
         <input class="put" type="text" placeholder="Other AMOUNT (Dolar)" >
 
+        <button class="donet-now-btn"> Donet now</button>
+
+    </div>
+</section>
+<section>
+    <div class="donet-here">
+        <h1>Our Donate plan</h1>
+        <p>We donate your money to the real helpless people going to the rural area where hardly reach anyone.<br/> We deliver the rifile with local volanteres who know the rural area properly</p>
+    </div>
+    <div class="work">
+        <div class="food common">
+            <img src="icons/food.png" alt="">
+            <h1> Food for a family</h1>
+            <p>We distribute Foods and Water like DRY FOOD, CAN FOOD, DRY RICE, MINAREL WATER. We serve foods and water to a single family that they can eat the foods more than a month.</p>
+        </div>
+        <div class="shelter common">
+            <img src="icons/shelter.png" alt="">
+            <h1> Shelter for a family</h1>
+            <p>We take them to a safe shalter. They can stay in the shekter until ther own shelter would be repair or build. we also help them to build ther shelter.</p>
+        </div>
+        <div class="education common">
+            <img src="icons/Frame-1.png" alt="">
+            <h1> Education for a children</h1>
+            <p>We also ensure the education of the children of the flood efected area. we have special teacher and tutor for teach the children . we provide them study instrumengt</p>
+        </div>
+
     </div>
 </section>
     
 </body>
 </html>
 
-<!-- <div class="amount">
-    <h3>$ 10</h3>
-    <h3>$ 50</h3>
-    <h3>$ 200</h3>
-    <h3>$ 1000</h3>
-    <h3>$ 5000</h3>
-</div> -->
