--- a/index.html
+++ b/index.html
@@ -57,7 +57,15 @@
 
     </div>
 </section>
+<section>
+    <div class="update donet-here">
+        <h1>Get My Updates</h1>
+        <p> Give your contact to us. we will send update to you every moment of our activity. The email box is given billow . Please input your email to get uptates.  </p>
+        <input class="email" type="email" placeholder="input your email" >
+    </div>
+</section>
     
 </body>
 </html>
 
+<!-- address here -->
