--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </section>
     <section>
         <div class="donet-here">
-            <h1>Our Donate plan</h1>
+            <h1>Our Donate Plan</h1>
             <p>We donate your money to the real helpless people going to the rural area where hardly reach anyone.<br/> We deliver the rifile with local volanteres who know the rural area properly</p>
         </div>
         <div class="work">
@@ -73,7 +73,7 @@
         <div class="update ">
             <h1>Get Your Updates</h1>
             <p> Give your contact to us. we will send update to you every moment of our activity. The email box is given billow . Please input your email to get uptates.  </p>
-            <input class="email" type="email" placeholder="input your email" >
+            <input class="email" type="email" placeholder="Input your email" >
         </div>
     </section>
     <footer class="footer">
